feat: 질의응답 부분 구현(js는 미구현)       -이미지 클릭시 두 번씩 페이지 나오는 부분 수정

--- a/src/main/resources/templates/boardPosts.html
+++ b/src/main/resources/templates/boardPosts.html
@@ -1,129 +1,129 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/header :: header}"></head>
-<body class="h-full flex flex-col" th:data-board-category="${boardCategory}">
-<div th:replace="~{fragments/bodyHeader :: bodyHeader}"></div>
-<br>
+    <!DOCTYPE HTML>
+    <html xmlns:th="http://www.thymeleaf.org">
+    <head th:replace="~{fragments/header :: header}"></head>
+    <body class="h-full flex flex-col" th:data-board-category="${boardCategory}">
+    <div th:replace="~{fragments/bodyHeader :: bodyHeader}"></div>
+    <br>
 
-<div class="h-full">
-    <div class="container mx-auto px-4 py-8">
-        <h1 class="text-3xl font-bold mb-6" th:text="${regionMajor} + ' ' + (${regionMiddle} != null ? ${regionMiddle} + ' ' : '') + '게시판'"></h1>
-        <h5 class="text-3xl font-bold mb-6" th:text="${boardCategory}"></h5>
+    <div class="h-full">
+        <div class="container mx-auto px-4 py-8">
+            <h1 class="text-3xl font-bold mb-6" th:text="${koreanRegionMajor} + ' ' + (${regionMiddle} != null ? ${regionMiddle} + ' ' : '') + '게시판'"></h1>
+            <h5 class="text-3xl font-bold mb-6" th:text="${boardCategory}"></h5>
 
-        <div class="mb-4 flex space-x-4">
-            <!--게시판 주요지역 선택-->
-            <select th:if="${boardCategory == '여행후기'}" id="regionMiddleSelect" class="p-2 border rounded">
-                <option th:each="middle : ${MiddleBoards}"
-                        th:value="${middle.regionMiddle}"
-                        th:text="${middle.regionMiddle}"
-                        th:selected="${middle.regionMiddle == regionMiddle}"></option>
-            </select>
-            <!--검색 분야 선택-->
-            <select id="searchTypeSelect" class="p-2 border rounded">
-                <option value="">모두</option>
-                <option value="title">제목</option>
-                <option value="content">내용</option>
-                <!--<option value="regionMiddle">지역</option>-->
-            </select>
-             <!--검색창 + 검색 버튼-->
-            <input type="text" id="searchInput" placeholder="검색어 입력" class="p-2 border rounded w-1/2"
-                   th:value="${keyword}">
-            <button id="searchBtn" class="bg-blue-500 text-white px-4 py-2 rounded">검색</button>
-        </div>
-
-        <!-- 정렬 옵션을 검색창 아래에 배치 -->
-        <div class="mb-6 flex justify-between items-center">
-            <div class="flex items-center space-x-4">
-                <select id="sortSelect" name="sortSelect"
-                        class="border border-gray-300 rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
-                    <option value="createdAt" th:selected="${sortBy == 'createdAt'}">최신순</option>
-                    <option value="recommends" th:selected="${sortBy == 'recommends'}">추천순</option>
+            <div class="mb-4 flex space-x-4">
+                <!--게시판 주요지역 선택-->
+                <select th:if="${boardCategory == '여행후기'}" id="regionMiddleSelect" class="p-2 border rounded">
+                    <option th:each="middle : ${MiddleBoards}"
+                            th:value="${middle.regionMiddle}"
+                            th:text="${middle.regionMiddle}"
+                            th:selected="${middle.regionMiddle == regionMiddle}"></option>
                 </select>
-                <button type="button" id="sortButton"
-                        class="bg-orange-500 text-white py-2 px-4 rounded-md hover:bg-orange-600 transition duration-200">
-                    정렬
-                </button>
+                <!--검색 분야 선택-->
+                <select id="searchTypeSelect" class="p-2 border rounded">
+                    <option value="">모두</option>
+                    <option value="title">제목</option>
+                    <option value="content">내용</option>
+                    <!--<option value="regionMiddle">지역</option>-->
+                </select>
+                 <!--검색창 + 검색 버튼-->
+                <input type="text" id="searchInput" placeholder="검색어 입력" class="p-2 border rounded w-1/2"
+                       th:value="${keyword}">
+                <button id="searchBtn" class="bg-blue-500 text-white px-4 py-2 rounded">검색</button>
             </div>
 
-            <div th:if="${loginMember != null}">
-                <a th:href="@{/board/{regionMajor}/{boardId}/posts/post-new(regionMajor=${regionMajor},boardId=${boardId})}"
-                   class="bg-orange-500 text-white px-4 py-2 rounded hover:bg-orange-600 transition duration-200">
-                    작성
-                </a>
+            <!-- 정렬 옵션을 검색창 아래에 배치 -->
+            <div class="mb-6 flex justify-between items-center">
+                <div class="flex items-center space-x-4">
+                    <select id="sortSelect" name="sortSelect"
+                            class="border border-gray-300 rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
+                        <option value="createdAt" th:selected="${sortBy == 'createdAt'}">최신순</option>
+                        <option value="recommends" th:selected="${sortBy == 'recommends'}">추천순</option>
+                    </select>
+                    <button type="button" id="sortButton"
+                            class="bg-orange-500 text-white py-2 px-4 rounded-md hover:bg-orange-600 transition duration-200">
+                        정렬
+                    </button>
+                </div>
+
+                <div th:if="${loginMember != null}">
+                    <a th:href="@{/board/{regionMajor}/{boardId}/posts/post-new(regionMajor=${regionMajor},boardId=${boardId})}"
+                       class="bg-orange-500 text-white px-4 py-2 rounded hover:bg-orange-600 transition duration-200">
+                        작성
+                    </a>
+                </div>
             </div>
-        </div>
 
-        <!-- 게시글 목록 테이블 -->
-        <table class="w-full border-collapse border">
-            <thead>
-            <tr class="bg-gray-100">
-                <th class="border p-2" style="width: 5.88%;">번호</th> <!-- 1/15 -->
-                <th class="border p-2" style="width: 52.94%;">제목</th> <!-- 9/15 -->
-                <th class="border p-2" style="width: 5.88%;">작성자</th> <!-- 1/15 -->
-                <th class="border p-2" style="width: 11.76%;">작성일</th> <!-- 2/15 -->
-                <th class="border p-2" style="width: 5.88%;">조회수</th> <!-- 1/15 -->
-                <th class="border p-2" style="width: 5.88%;">추천수</th> <!-- 1/15 -->
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="post : ${posts}"
-                class="cursor-pointer hover:bg-gray-100"
-                th:data-url="@{/board/{regionMajor}/{boardId}/posts/{postId}(regionMajor=${regionMajor},boardId=${boardId},postId=${post.postId})}"
-                onclick="location.href = this.getAttribute('data-url')">
-                <td class="border p-2" th:text="${post.postId}"></td>
-                <td class="border p-2" th:text="${post.title}"></td>
-                <td class="border p-2" th:text="${post.memberName}"></td>
-                <td class="border p-2" th:text="${#temporals.format(post.createdAt, 'yyyy-MM-dd')}"></td>
-                <td class="border p-2" th:text="${post.views}"></td>
-                <td class="border p-2" th:text="${post.recommends}"></td>
-            </tr>
-            </tbody>
-        </table>
+            <!-- 게시글 목록 테이블 -->
+            <table class="w-full border-collapse border">
+                <thead>
+                <tr class="bg-gray-100">
+                    <th class="border p-2" style="width: 5.88%;">번호</th> <!-- 1/15 -->
+                    <th class="border p-2" style="width: 52.94%;">제목</th> <!-- 9/15 -->
+                    <th class="border p-2" style="width: 5.88%;">작성자</th> <!-- 1/15 -->
+                    <th class="border p-2" style="width: 11.76%;">작성일</th> <!-- 2/15 -->
+                    <th class="border p-2" style="width: 5.88%;">조회수</th> <!-- 1/15 -->
+                    <th class="border p-2" style="width: 5.88%;">추천수</th> <!-- 1/15 -->
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="post : ${posts}"
+                    class="cursor-pointer hover:bg-gray-100"
+                    th:data-url="@{/board/{regionMajor}/{boardId}/posts/{postId}(regionMajor=${regionMajor},boardId=${boardId},postId=${post.postId})}"
+                    onclick="location.href = this.getAttribute('data-url')">
+                    <td class="border p-2" th:text="${post.postId}"></td>
+                    <td class="border p-2" th:text="${post.title}"></td>
+                    <td class="border p-2" th:text="${post.memberName}"></td>
+                    <td class="border p-2" th:text="${#temporals.format(post.createdAt, 'yyyy-MM-dd')}"></td>
+                    <td class="border p-2" th:text="${post.views}"></td>
+                    <td class="border p-2" th:text="${post.recommends}"></td>
+                </tr>
+                </tbody>
+            </table>
 
-        <div class="mt-6 flex justify-center">
-            <nav class="inline-flex">
-                <!-- 첫 페이지로 이동 -->
-                <a th:if="${currentPage > 1}"
-                   th:href="@{/board/{regionMajor}/{boardId}/posts(regionMajor=${regionMajor},boardId=${boardId},page=1,sortBy=${sortBy},searchType=${searchType},keyword=${keyword})}"
-                   class="px-3 py-2 border border-gray-300 bg-white text-gray-500 hover:bg-gray-50">
-                    &lt;&lt;
-                </a>
+            <div class="mt-6 flex justify-center">
+                <nav class="inline-flex">
+                    <!-- 첫 페이지로 이동 -->
+                    <a th:if="${currentPage > 1}"
+                       th:href="@{/board/{regionMajor}/{boardId}/posts(regionMajor=${regionMajor},boardId=${boardId},page=1,sortBy=${sortBy},searchType=${searchType},keyword=${keyword})}"
+                       class="px-3 py-2 border border-gray-300 bg-white text-gray-500 hover:bg-gray-50">
+                        &lt;&lt;
+                    </a>
 
-                <!-- 이전 페이지로 이동 -->
-                <a th:if="${currentPage > 1}"
-                   th:href="@{/board/{regionMajor}/{boardId}/posts(regionMajor=${regionMajor},boardId=${boardId},page=${currentPage - 1},sortBy=${sortBy},searchType=${searchType},keyword=${keyword})}"
-                   class="px-3 py-2 border border-gray-300 bg-white text-gray-500 hover:bg-gray-50">
-                    &lt;
-                </a>
+                    <!-- 이전 페이지로 이동 -->
+                    <a th:if="${currentPage > 1}"
+                       th:href="@{/board/{regionMajor}/{boardId}/posts(regionMajor=${regionMajor},boardId=${boardId},page=${currentPage - 1},sortBy=${sortBy},searchType=${searchType},keyword=${keyword})}"
+                       class="px-3 py-2 border border-gray-300 bg-white text-gray-500 hover:bg-gray-50">
+                        &lt;
+                    </a>
 
-                <!-- 페이지 번호 표시 -->
-                <a th:each="pageNum : ${#numbers.sequence(1, totalPages > 0 ? totalPages : 1)}"
-                   th:if="${pageNum >= currentPage - 2 and pageNum <= currentPage + 2 and pageNum <= (totalPages > 0 ? totalPages : 1)}"
-                   th:href="@{/board/{regionMajor}/{boardId}/posts(regionMajor=${regionMajor},boardId=${boardId},page=${pageNum},sortBy=${sortBy},searchType=${searchType},keyword=${keyword})}"
-                   th:text="${pageNum}"
-                   th:class="${pageNum == currentPage} ? 'px-3 py-2 bg-blue-500 text-white' : 'px-3 py-2 border border-gray-300 bg-white text-gray-500 hover:bg-gray-50'">
-                </a>
+                    <!-- 페이지 번호 표시 -->
+                    <a th:each="pageNum : ${#numbers.sequence(1, totalPages > 0 ? totalPages : 1)}"
+                       th:if="${pageNum >= currentPage - 2 and pageNum <= currentPage + 2 and pageNum <= (totalPages > 0 ? totalPages : 1)}"
+                       th:href="@{/board/{regionMajor}/{boardId}/posts(regionMajor=${regionMajor},boardId=${boardId},page=${pageNum},sortBy=${sortBy},searchType=${searchType},keyword=${keyword})}"
+                       th:text="${pageNum}"
+                       th:class="${pageNum == currentPage} ? 'px-3 py-2 bg-blue-500 text-white' : 'px-3 py-2 border border-gray-300 bg-white text-gray-500 hover:bg-gray-50'">
+                    </a>
 
-                <!-- 다음 페이지로 이동 -->
-                <a th:if="${currentPage < (totalPages > 0 ? totalPages : 1)}"
-                   th:href="@{/board/{regionMajor}/{boardId}/posts(regionMajor=${regionMajor},boardId=${boardId},page=${currentPage + 1},sortBy=${sortBy},searchType=${searchType},keyword=${keyword})}"
-                   class="px-3 py-2 border border-gray-300 bg-white text-gray-500 hover:bg-gray-50">
-                    &gt;
-                </a>
+                    <!-- 다음 페이지로 이동 -->
+                    <a th:if="${currentPage < (totalPages > 0 ? totalPages : 1)}"
+                       th:href="@{/board/{regionMajor}/{boardId}/posts(regionMajor=${regionMajor},boardId=${boardId},page=${currentPage + 1},sortBy=${sortBy},searchType=${searchType},keyword=${keyword})}"
+                       class="px-3 py-2 border border-gray-300 bg-white text-gray-500 hover:bg-gray-50">
+                        &gt;
+                    </a>
 
-                <!-- 마지막 페이지로 이동 -->
-                <a th:if="${currentPage < (totalPages > 0 ? totalPages : 1)}"
-                   th:href="@{/board/{regionMajor}/{boardId}/posts(regionMajor=${regionMajor},boardId=${boardId},page=${totalPages > 0 ? totalPages : 1},sortBy=${sortBy},searchType=${searchType},keyword=${keyword})}"
-                   class="px-3 py-2 border border-gray-300 bg-white text-gray-500 hover:bg-gray-50">
-                    &gt;&gt;
-                </a>
-            </nav>
+                    <!-- 마지막 페이지로 이동 -->
+                    <a th:if="${currentPage < (totalPages > 0 ? totalPages : 1)}"
+                       th:href="@{/board/{regionMajor}/{boardId}/posts(regionMajor=${regionMajor},boardId=${boardId},page=${totalPages > 0 ? totalPages : 1},sortBy=${sortBy},searchType=${searchType},keyword=${keyword})}"
+                       class="px-3 py-2 border border-gray-300 bg-white text-gray-500 hover:bg-gray-50">
+                        &gt;&gt;
+                    </a>
+                </nav>
+            </div>
         </div>
     </div>
-</div>
-<div th:replace="~{fragments/footer :: footer}"></div>
-</body>
-<script src="/js/footer.js"></script>
-<script src="/js/board_postList.js"></script>
-</html>
+    <div th:replace="~{fragments/footer :: footer}"></div>
+    </body>
+    <script src="/js/footer.js"></script>
+    <script src="/js/board_postList.js"></script>
+    </html>
 
